--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "main": "lib.sandbox2.js",
     "name": "sandbox2",
     "nameAlias": "sandbox2",
+    "nameLib": "sandbox2",
     "nameOriginal": "sandbox2",
     "os": [
         "darwin",
